--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.0",
     "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
